# Event-Driven-Architecture

./: awsLearning.drawio  azure-pipelines.yml  eks-deployment.yml  hello-world.Dockerfile  message-generator.Dockerfile  readme.md
ansible/: inventory.ini
ansible/playbooks/: deploy.yml
azure-templates/: build-steps.yml  deploy-ecs.yml  deploy-eks.yml  deploy-steps.yml  nginx.conf  variables.yml
hello-world/: Cargo.toml
hello-world/src/: bulk_test.rs  index.html  main.rs  models.rs  utils.rs
message-generator/: Cargo.toml
message-generator/src/: main.rs
terraform/: afridi-key.pem  ecs.tf  eks.tf  lambda.tf  main.tf  outputs.tf  providers.tf  rds.tf  resource.tf  s3.tf  terraform.md  terraform.tfstate  terraform.tfstate.1780272641.backup  terraform.tfstate.1780767899.backup  terraform.tfstate.1780768638.backup  terraform.tfstate.backup  variables.tf
terraform/lambda-helper/: index.js
