[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["compress-gzip", "cookies", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
